<resources>
    <string name="app_name">Species</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="hello">Hello</string>
    <string name="let_s_learn_more_about_plants">Let\'s Learn More About Plants</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="register_new_account">Register new account</string>
    <string name="user_name">User Name</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_link_will_be_sent_to_your_email">Reset link will be sent to your email</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="next">NEXT</string>
    <string name="title_text">Title Text</string>
    <string name="description_text">Description Text</string>
    <string name="adding_new">ADDING NEW</string>
    <string name="species">SPECIES</string>
    <string name="articles">ARTICLES</string>
    <string name="plant_types">Plant Types</string>
    <string name="photography">Photography</string>
    <string name="home_plants">Home Plants</string>
    <string name="_68_types_of_plants">68 Types of Plants</string>
    <string name="name">Name</string>
    <string name="red_cactus">Red Cactus</string>
    <string name="kingdom">KINGDOM</string>
    <string name="family">FAMILY</string>
    <string name="plantae">Plantae</string>
    <string name="cactaceae">Cactaceae</string>
    <string name="description">DESCRIPTION</string>
    <string name="rebutia_minuscula_is_a_species_of_cactus_from_south_america_found_in_northern_argentina_and_bolivia_it_is_the_type_species_of_the_genus_rebutia">Rebutia minuscula is a species of cactus from South America found in northern Argentina and Bolivia. It is the type species of the genus Rebutia.</string>
    <string name="cactus">Cactus</string>
    <string name="shivani_vora">Shivani Vora</string>
    <string name="article_desc">Public parks aside, getting a dose of nature can be a tricky task during an urban escape. But nat ure should and can fit into that city getaway, acc ording to Kally Ellis, the founder of the London fl orist company McQueens and the in-house florist for the Maybourne Hotel Group. “Connecting with the natural world wherever you are is a great antid ote to jet lag and travel tiredness,” she said. “Plan ts and flowers can refresh us, boost our energy and help us recalibrate.”</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>