<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailSpeciesActivity">

    <ImageView
        android:id="@+id/detailImageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/photo4"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/detailPlantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/red_cactus"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailImageView" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:text="@string/kingdom"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/detailPlantName"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:text="@string/family"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/TextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toEndOf="@+id/TextView2"
        app:layout_constraintTop_toTopOf="@+id/TextView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/detailKingdomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/plantae"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/TextView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TextView2"
        app:layout_constraintTop_toBottomOf="@+id/TextView2" />

    <TextView
        android:id="@+id/detailFamilyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cactaceae"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/detailKingdomTextView"
        app:layout_constraintEnd_toEndOf="@+id/TextView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TextView3"
        app:layout_constraintTop_toTopOf="@+id/detailKingdomTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/detailKingdomTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detailKingdomTextView"
        app:layout_constraintTop_toBottomOf="@+id/detailKingdomTextView" />

    <TextView
        android:id="@+id/detailDescriptionTextView"
        android:layout_width="350dp"
        android:layout_height="320dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/rebutia_minuscula_is_a_species_of_cactus_from_south_america_found_in_northern_argentina_and_bolivia_it_is_the_type_species_of_the_genus_rebutia"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView4"
        app:layout_constraintVertical_bias="0.239" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:numStars="5"
        android:progressBackgroundTint="@color/grey"
        android:progressTint="@color/yellow"
        android:rating="4"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:stepSize="1"
        android:transformPivotX="10dp"
        android:transformPivotY="0dp"
        app:layout_constraintEnd_toEndOf="@+id/detailPlantName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detailPlantName"
        app:layout_constraintTop_toBottomOf="@+id/detailPlantName" />

</androidx.constraintlayout.widget.ConstraintLayout>