<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="12dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/white_square"
            android:elevation="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:id="@+id/eachSpeciesImageView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:scaleType="fitXY"
                android:src="@drawable/photo4"
                android:layout_gravity="center"
                android:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


        <TextView
            android:id="@+id/plantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:text="@string/red_cactus"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/kingdom"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/plantName"
            app:layout_constraintTop_toBottomOf="@+id/plantName" />

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/TextView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.426"
            app:layout_constraintStart_toEndOf="@+id/TextView2"
            app:layout_constraintTop_toTopOf="@+id/TextView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/kingdomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/plantae"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/TextView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/TextView2"
            app:layout_constraintTop_toBottomOf="@+id/TextView2" />

        <TextView
            android:id="@+id/familyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cactaceae"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/kingdomTextView"
            app:layout_constraintEnd_toEndOf="@+id/TextView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/TextView3"
            app:layout_constraintTop_toTopOf="@+id/kingdomTextView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/TextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/kingdomTextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/kingdomTextView"
            app:layout_constraintTop_toBottomOf="@+id/kingdomTextView" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="200dp"
            android:layout_height="46dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/rebutia_minuscula_is_a_species_of_cactus_from_south_america_found_in_northern_argentina_and_bolivia_it_is_the_type_species_of_the_genus_rebutia"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/TextView4"
            app:layout_constraintTop_toBottomOf="@+id/TextView4"
            app:layout_constraintVertical_bias="0.239" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>